# cryptovol-python

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
cryptovol/: __init__.py  client.py  exceptions.py  models.py
docs/: errors.md  index.md  quickstart.md  recipes.md  reference.md
errors/: index.html
examples/: 01_quickstart.py  02_smile.py  03_risk_reversal.py  04_greeks.py  05_handle_plan_errors.py
quickstart/: index.html
recipes/: index.html
reference/: index.html
search/: search_index.json
tests/: conftest.py  test_client.py
